--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -20,3 +20,14 @@ h3
     color: darkolivegreen;
     background-color: lightgreen;
 }
+
+div
+{
+    background-color: lightgoldenrodyellow;
+}
+
+button
+{
+    color: darkolivegreen;
+    background-color: lightgreen;
+}
